--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,6 @@ button {
   z-index: 15;
   height: 100vh;
   top: -2px;
-  border-radius: 0px 0px 20px 20px;
   background: #7b4b83;
   position: fixed;
   right: -100%;
@@ -544,10 +543,10 @@ button {
   margin: 22px 0;
 }
 .nav__list {
+  width: 100%;
   padding-top: 40px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 16px;
   padding-bottom: 30px;
